# uj-objective-programming

./: README.md
demos/exercise-4/: exercise-4-demo.mov
exercise-1-paradigms/: main.pas
exercise-2/migrations/: Version20250405082437.php
exercise-2/src/Controller/: ProductController.php
exercise-3/: build.gradle.kts  settings.gradle.kts
exercise-3/src/main/resources/: application.properties
exercise-4/: go.mod  main.go
exercise-5/: .gitignore  biome.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
exercise-5/prisma/: dev.db  schema.prisma  seed.ts
exercise-5/prisma/migrations/20250506112620_init/: migration.sql
exercise-5/server/: express.ts  prisma.ts
exercise-5/src/: App.tsx  main.tsx  routeTree.gen.ts  store.ts
exercise-5/src/components/: Products.tsx  orders.tsx
exercise-5/src/constants/: index.ts
exercise-5/src/routes/: __root.tsx  cart.tsx  index.tsx  orders.tsx
exercise-5/src/types/: models.ts
exercise-5/tests/: pyproject.toml  tests.py
exercise-7/: Dockerfile  Package.resolved  Package.swift  README.md  docker-compose.yml
exercise-7/Sources/Exercise/: configure.swift  routes.swift
exercise-7/Sources/Exercise/Controllers/: ProductController.swift
exercise-7/Sources/Exercise/Models/: Product.swift
exercise-7/Tests/ExerciseTests/: ExerciseTests.swift
exercise-9/: settings.gradle.kts
exercise-9/app/: build.gradle.kts
exercise-9/app/src/main/: AndroidManifest.xml
exercise-9/app/src/main/res/layout/: fragment_dashboard.xml  (+3 more)
exercise-9/gradle/wrapper/: gradle-wrapper.properties
(+21 files in other folders)
